--- a/app.json
+++ b/app.json
@@ -1,5 +1,20 @@
 {
   "expo": {
-    "sdkVersion": "23.0.0"
-  }
+    "sdkVersion": "23.0.0",
+    "orientation": "portrait",
+    "name": "MobileFlashcards",
+    "description": "The best triathlon training app in the world.",
+    "slug": "mobileflashcards",
+    "version": "1.0",
+    "icon": "http://cs5-1.4pda.to/8900655.png",
+    "notification": {
+      "icon": "http://www.student-scholarships.com/images/made/img/featured/nav_basketball_45_45.png"
+    },
+    "ios": {
+     "bundleIdentifier": "org.mobileflashcards.exp",
+    },
+    "android": {
+     "package": "org.mobileflashcards.exp",
+    }
+  },
 }
